--- a/styles.css
+++ b/styles.css
@@ -20,18 +20,28 @@ ul {
 }
 
 header {
+    min-height: 760px;
+    padding: 0 0 5% 0;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 10%;
 }
 
 #header-text-info {
+    padding: 125px 0 30px 0;
+    box-sizing: border-box;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
     flex-wrap: wrap;
+    min-height: 275px;
     width: 65%;
+}
+
+#header-text-info h1 {
+    padding: 0px;
+    margin: 0px;
 }
 
 h1.header-text {
@@ -87,6 +97,9 @@ div.vertical > span:first-child {
 }
 
 #about-me {
+    min-height: 500px;
+    padding: 5% 0;
+    box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -103,6 +116,9 @@ div.vertical > span:first-child {
 }
 
 #skills {
+    min-height: 600px;
+    padding: 5% 0;
+    box-sizing: border-box;
     display: flex;
     justify-content: center;
     flex-direction: column;  
@@ -118,17 +134,11 @@ div.vertical > span:first-child {
     filter: invert(97%) sepia(92%) saturate(1%) hue-rotate(110deg) brightness(112%) contrast(80%);
 }
 
-.skill-title {
+.programm-title {
     font-family: baldGilroy;
     font-size: 14px;
     text-align: center;
     color: #828282;
-}
-
-ul#programms li {
-    display: flex;
-    justify-content: space-between;
-    margin: 40px;
 }
 
 #programms {
@@ -146,8 +156,12 @@ ul#programms li {
 }
 
 .programm {
+    height: 205px;
+    display: flex;
+    justify-content: space-between;
     flex-direction: column;
     align-items: center;
+    margin: 40px;
 }
 
 .skill-estimation {
@@ -174,17 +188,32 @@ ul#programms li {
     justify-content: center;
     flex-direction: column;  
     align-items: center;
-    width: 100%;
-    margin: 20px;  
+    width: 100%; 
 }
 
 .portfolio-item img {
     width: 65%;
 }
 
+.portfolio-item a {
+    padding: 45px 0 100px 0;
+    box-sizing: border-box;
+}
+
+.portfolio-item a {
+    padding: 45px 0 100px 0;
+    box-sizing: border-box;
+}
+
+
 @media screen and (max-width: 600px) {
     .portfolio-item img {
         width: 75%;
+    }
+
+    .portfolio-item a {
+        padding: 40px 0 88px 0;
+        box-sizing: border-box;
     }
 }
 
@@ -192,8 +221,17 @@ ul#programms li {
     .portfolio-item img {
         width: 90%;
     }
+
+    .portfolio-item a {
+        padding: 33px 0 78px 0;
+        box-sizing: border-box;
+    }
 }
+
 footer {
+    min-height: 620px;
+    padding: 5% 0 8% 0;
+    box-sizing: border-box;
     display: flex;
     justify-content: center;
 }
@@ -201,12 +239,53 @@ footer {
 #contacts {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+    height: 100%;
     width: 65%;
 }
 
 #contacts p {
     text-align: center;
+}
+
+#contact-button {
+    margin: 30px 0 85px;
+    align-items: center;
+    text-decoration:none;
+    background-color: #070707;
+    border: 0;
+    border-radius: 100px;
+    box-sizing: border-box;
+    color: #ffffff;
+    cursor: pointer;
+    display: inline-flex;
+    font-family: baldGilroy;
+    font-size: 18px;
+    justify-content: center;
+    width: 180px;
+    min-height: 40px;
+    min-width: 0px;
+    overflow: hidden;
+    padding: 0px;
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
+    vertical-align: middle;
+    transition: ease 1s;
+}
+  
+#contact-button:hover,
+#contact-button:focus { 
+    background-color: #585858;
+    color: #ffffff;
+}
+
+@media screen and (max-width: 400px) {
+    #contact-button {
+        width: 315px;
+        margin: 40px 0 48px;
+    }
 }
 
 #links li {
@@ -258,38 +337,3 @@ footer {
     font-size: 14px;
     color: #828282;
 }
-
-#contact-button {
-  align-items: center;
-  text-decoration:none;
-  background-color: #070707;
-  border: 0;
-  border-radius: 100px;
-  box-sizing: border-box;
-  color: #ffffff;
-  cursor: pointer;
-  display: inline-flex;
-  font-family: baldGilroy;
-  font-size: 18px;
-  justify-content: center;
-  max-width: 480px;
-  min-height: 40px;
-  min-width: 0px;
-  overflow: hidden;
-  padding: 0px;
-  padding-left: 20px;
-  padding-right: 20px;
-  text-align: center;
-  touch-action: manipulation;
-  transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
-  user-select: none;
-  -webkit-user-select: none;
-  vertical-align: middle;
-}
-
-#contact-button:hover,
-#contact-button:focus { 
-  background-color: #333333;
-  color: #ffffff;
-}
-
