--- a/styles.css
+++ b/styles.css
@@ -23,12 +23,10 @@ header {
     min-height: 760px;
     padding: 0 0 5% 0;
     box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
     align-items: center;
 }
 
-#header-text-info {
+.header-text-info {
     padding: 125px 0 30px 0;
     box-sizing: border-box;
     display: flex;
@@ -39,7 +37,7 @@ header {
     width: 65%;
 }
 
-#header-text-info h1 {
+.header-text-info h1 {
     padding: 0px;
     margin: 0px;
 }
@@ -56,12 +54,17 @@ h1.header-text {
     color: #070707;   
 }
 
-div.vertical {
+.vertical-text {
     transform: rotate(180deg);
 }
 
+.vertical-text > span:before {
+    color: #828282;
+    content: "RU";
+  }
 
-div.vertical span {
+
+div.vertical-text span {
     display: flex;    
     writing-mode: vertical-lr;
     padding: 2px 0px;
@@ -70,12 +73,8 @@ div.vertical span {
     color: #070707;
 }
 
-div.vertical > span:first-child {
-    color: #828282;
-}
-
 @media screen and (max-width: 500px) {
-    div.vertical {
+    div.vertical-text {
         display: none;
     }
 }
@@ -96,41 +95,36 @@ div.vertical > span:first-child {
     color: #070707;
 }
 
-#about-me {
+.section-about-me {
     min-height: 500px;
     padding: 5% 0;
     box-sizing: border-box;
-    display: flex;
     justify-content: center;
     align-items: center;
     background-color: #F6F6F6;
 }
 
-#info {
+.about-me-info {
     width: 40%;
-    display: flex;
     justify-content: center;
-    flex-direction: column;  
     align-items: center;
     text-align: center;
 }
 
-#skills {
+.section-skills {
     min-height: 600px;
     padding: 5% 0;
     box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;  
+    justify-content: center; 
     align-items: center;
 
 }
 
-.on {
+.filled {
     filter: invert(0%) sepia(94%) saturate(14%) hue-rotate(353deg) brightness(93%) contrast(95%);
 }
 
-.off {
+.empty {
     filter: invert(97%) sepia(92%) saturate(1%) hue-rotate(110deg) brightness(112%) contrast(80%);
 }
 
@@ -141,7 +135,7 @@ div.vertical > span:first-child {
     color: #828282;
 }
 
-#programms {
+.programms-list {
     display: flex;
     width: 65%;
     justify-content: space-around;
@@ -149,7 +143,7 @@ div.vertical > span:first-child {
 }
 
 @media screen and (max-width: 400px) {
-    #programms {
+    programms-list {
       flex-direction: column;
       justify-content: center;
     }
@@ -169,13 +163,13 @@ div.vertical > span:first-child {
     justify-content: space-between;
 }
 
-#portfolio {
+.portfolio-section {
     background-color: #F6F6F6;
     display: flex;
     justify-content: center;
 }
 
-#portfolio-items {
+.portfolio-items-list {
     display: flex;
     justify-content: center;
     flex-direction: column;  
@@ -236,20 +230,18 @@ footer {
     justify-content: center;
 }
 
-#contacts {
-    display: flex;
-    flex-direction: column;
+.footer-contacts {
     justify-content: space-between;
     align-items: center;
     height: 100%;
     width: 65%;
 }
 
-#contacts p {
+.footer-contacts p {
     text-align: center;
 }
 
-#contact-button {
+.contact-button {
     margin: 30px 0 85px;
     align-items: center;
     text-decoration:none;
@@ -275,26 +267,26 @@ footer {
     transition: ease 1s;
 }
   
-#contact-button:hover,
-#contact-button:focus { 
+.contact-button:hover,
+.contact-button:focus { 
     background-color: #585858;
     color: #ffffff;
 }
 
 @media screen and (max-width: 400px) {
-    #contact-button {
+    .contact-button {
         width: 315px;
         margin: 40px 0 48px;
     }
 }
 
-#links li {
+.contact-links-list li {
     display: flex;
     justify-content: space-between;
     margin: 5px;
 }
 
-#links {
+.contact-links-list {
     display: flex;
     width: 350px;
     justify-content: space-between;
